# 240_final_project

./: .gitignore  Makefile  README.md  analyze.cpp
analyzing/: CMakeLists.txt  analyze.cpp
python/: requirements.txt
python/scraping/: fetch_balance.py
python/visualizing/: vizualize.py
scraping/: fetch_balance.py  requirements.txt
